--- a/src/main/resources/FXML/sidebar_QL.fxml
+++ b/src/main/resources/FXML/sidebar_QL.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.paint.ImagePattern?>
 <?import javafx.scene.shape.Circle?>
 
+<?import javafx.scene.image.ImageView?>
 <BorderPane prefWidth="322.0"
             styleClass="sidebar"
             stylesheets="@../CSS/sidebar.css"
@@ -24,16 +25,10 @@
             <HBox alignment="CENTER" spacing="15" styleClass="avatar_section">
                 <children>
                     <StackPane alignment="CENTER">
-                        <Circle fx:id="avatarCircle" fill="#f0f0f0" radius="57" stroke="#cccccc" strokeWidth="2" />
-                        <Circle radius="55">
-                            <fill>
-                                <ImagePattern>
-                                    <image>
-                                        <Image url="@../IMG/avatar.png" />
-                                    </image>
-                                </ImagePattern>
-                            </fill>
-                        </Circle>
+                        <StackPane alignment="CENTER">
+                            <ImageView fx:id="avatarImage" fitHeight="110" fitWidth="110" />
+                        </StackPane>
+
                     </StackPane>
                     <VBox alignment="CENTER_LEFT" spacing="5">
                         <Label fx:id="lblTenNV" styleClass="username" text="Tên nhân viên" />
