--- a/src/main/resources/FXML/DatBan.fxml
+++ b/src/main/resources/FXML/DatBan.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
@@ -12,12 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800.0" prefWidth="1400.0"
-            style="-fx-background-color: D9D9D9;"
-            stylesheets="@../CSS/datban.css"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.controllers.DatBanController">
+<BorderPane prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/datban.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.DatBanController">
 
     <!-- Nội dung chính -->
     <center>
@@ -26,7 +23,7 @@
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
-            <VBox prefHeight="780.0" prefWidth="660.0" styleClass="center-p">
+            <VBox styleClass="center-p">
                 <children>
                     <HBox alignment="CENTER" prefHeight="77.0" prefWidth="660.0" spacing="20" styleClass="time-form">
                         <children>
@@ -41,9 +38,9 @@
                             <VBox alignment="CENTER_LEFT" spacing="6" styleClass="time-field">
                                 <Label styleClass="field-label" text="Giờ đặt" />
                                 <HBox alignment="CENTER" spacing="6">
-                                    <Spinner fx:id="hourSpinner" editable="true"  max="23" min="0" prefHeight="36.0" styleClass="time-spinner" />
+                                    <Spinner fx:id="hourSpinner" editable="true" max="23" min="0" prefHeight="36.0" styleClass="time-spinner" />
                                     <Label styleClass="time-separator" text=":" />
-                                    <Spinner fx:id="minuteSpinner" editable="true"  max="59" min="0" prefHeight="35.0" prefWidth="100.0" styleClass="time-spinner" />
+                                    <Spinner fx:id="minuteSpinner" editable="true" max="59" min="0" prefHeight="35.0" prefWidth="100.0" styleClass="time-spinner" />
                                 </HBox>
                             </VBox>
 
@@ -77,8 +74,7 @@
                                        <Image url="@../IMG/ban/out.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                 fx:id="starOut_01">
+                                 <ImageView fx:id="starOut_01" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                      <image>
                                          <Image url="@../IMG/icon/StarWhite.png" />
                                      </image>
@@ -92,8 +88,7 @@
                                        <Image url="@../IMG/ban/out.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starOut_02">
+                                 <ImageView fx:id="starOut_02" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -108,8 +103,7 @@
                                        <Image url="@../IMG/ban/out.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starOut_03">
+                                 <ImageView fx:id="starOut_03" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -124,8 +118,7 @@
                                        <Image url="@../IMG/ban/out.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starOut_04">
+                                 <ImageView fx:id="starOut_04" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -155,8 +148,7 @@
                                        <Image url="@../IMG/ban/IN.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starIN_01">
+                                 <ImageView fx:id="starIN_01" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -171,8 +163,7 @@
                                        <Image url="@../IMG/ban/IN.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starIN_02">
+                                 <ImageView fx:id="starIN_02" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -187,8 +178,7 @@
                                        <Image url="@../IMG/ban/IN.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starIN_03">
+                                 <ImageView fx:id="starIN_03" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -203,8 +193,7 @@
                                        <Image url="@../IMG/ban/IN.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starIN_04">
+                                 <ImageView fx:id="starIN_04" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -234,8 +223,7 @@
                                        <Image url="@../IMG/ban/vip.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starVIP_01">
+                                 <ImageView fx:id="starVIP_01" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
@@ -250,13 +238,12 @@
                                        <Image url="@../IMG/ban/vip.png" />
                                     </image>
                                  </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"
-                                            fx:id="starVIP_02">
+                                 <ImageView fx:id="starVIP_02" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../IMG/icon/StarWhite.png" />
                                     </image>
                                  </ImageView>
-                                 <Label text="> 12" />
+                                 <Label text="&gt; 12" />
                               </children>
                            </VBox>
                            <AnchorPane layoutX="220.0" layoutY="20.0" prefHeight="184.0" prefWidth="100.0" />
@@ -277,33 +264,78 @@
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label alignment="CENTER" prefHeight="54.0" prefWidth="351.0" styleClass="section-title" text="Thông Tin Đặt Bàn" textAlignment="CENTER" />
+            <!-- Tiêu đề -->
+            <Label alignment="CENTER" prefHeight="54.0" prefWidth="351.0"
+                   styleClass="section-title"
+                   text="Thông Tin Đặt Bàn"
+                   textAlignment="CENTER" />
 
+            <!-- Form thông tin khách hàng -->
             <VBox prefHeight="196.0" prefWidth="340.0" spacing="12" styleClass="customer-info">
+                <!-- Họ tên -->
                 <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label prefHeight="18.0" prefWidth="131.0" styleClass="info-label" text="Họ và tên:" />
-                    <TextField prefHeight="19.0" prefWidth="230.0" promptText="Nhập họ tên" styleClass="filter-tf" />
+                    <Label prefHeight="18.0" prefWidth="131.0"
+                           styleClass="info-label" text="Họ và tên:" />
+                    <TextField fx:id="txtTenKH"
+                               prefHeight="19.0" prefWidth="230.0"
+                               promptText="Nhập họ tên"
+                               styleClass="filter-tf" />
                 </HBox>
+
+                <!-- SĐT -->
                 <HBox alignment="CENTER_LEFT" spacing="10">
                     <Label styleClass="info-label" text="SĐT:" />
-                    <TextField prefHeight="24.0" prefWidth="228.0" promptText="Nhập số điện thoại" styleClass="filter-tf" />
+                    <TextField fx:id="txtSDT"
+                               prefHeight="24.0" prefWidth="228.0"
+                               promptText="Nhập số điện thoại"
+                               styleClass="filter-tf" />
                 </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="56.0" spacing="10">
-               <children>
-                  <Label styleClass="info-label" text="Bàn:" />
-                  <TextField prefHeight="24.0" prefWidth="228.0" promptText="Bàn" styleClass="filter-tf" />
-               </children>
-            </HBox>
+
+                <!-- Khu vực -->
                 <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label prefHeight="18.0" prefWidth="120.0" styleClass="info-label" text="Số lượng khách:" />
-                    <TextField prefHeight="24.0" prefWidth="228.0" promptText="Số người" styleClass="filter-tf" />
+                    <Label styleClass="info-label" text="Khu vực:" />
+                    <ComboBox fx:id="cboKhuVuc" prefWidth="150.0" />
                 </HBox>
+
+                <!-- Loại bàn -->
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Label styleClass="info-label" text="Loại bàn:" />
+                    <ComboBox fx:id="cboLoaiBan" prefWidth="150.0" />
+                </HBox>
+
+                <!-- Số lượng khách -->
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Label prefHeight="18.0" prefWidth="120.0"
+                           styleClass="info-label" text="Số lượng khách:" />
+                    <TextField fx:id="txtSoLuong"
+                               prefHeight="24.0" prefWidth="228.0"
+                               promptText="Số người"
+                               styleClass="filter-tf" />
+                </HBox>
+
+                <!-- Ghi chú -->
                 <HBox alignment="CENTER_LEFT" spacing="10">
                     <Label styleClass="info-label" text="Ghi chú:" />
-                    <TextField prefHeight="24.0" prefWidth="228.0" promptText="Ghi chú đặc biệt" styleClass="filter-tf" />
+                    <TextField fx:id="txtGhiChu"
+                               prefHeight="24.0" prefWidth="228.0"
+                               promptText="Ghi chú đặc biệt"
+                               styleClass="filter-tf" />
                 </HBox>
             </VBox>
-         <AnchorPane prefHeight="452.0" prefWidth="340.0" />
+
+            <!-- Nút thêm vào WaitList -->
+            <AnchorPane prefHeight="452.0" prefWidth="340.0">
+                <children>
+                    <Button fx:id="btnWaitlist"
+                            layoutX="85.0" layoutY="240.0"
+                            prefWidth="180.0" prefHeight="45.0"
+                            text="Thêm Vào WaitList"
+                            textAlignment="CENTER"
+                            style="-fx-background-color: #E6763E; -fx-text-fill: white;
+                               -fx-font-weight: bold; -fx-background-radius: 10;"
+                            visible="false" />
+                </children>
+            </AnchorPane>
         </VBox>
     </right>
 </BorderPane>
