THÊM BUTTON QL Thành Viên

--- a/src/main/resources/FXML/sidebar_QL.fxml
+++ b/src/main/resources/FXML/sidebar_QL.fxml
@@ -46,6 +46,7 @@
             <Button fx:id="btnQLNhanVien" onAction="#handleMenuAction" styleClass="menu-item" text="⚙ QUẢN LÍ NHÂN VIÊN" />
             <Button fx:id="btnQLKhuyenMai" onAction="#handleMenuAction" styleClass="menu-item" text="⚙ QUẢN LÍ KHUYẾN MÃI" />
             <Button fx:id="btnQLChinhSach" onAction="#handleMenuAction" styleClass="menu-item" text="⚙ QUẢN LÍ CHÍNH SÁCH" />
+            <Button fx:id="btnQLThanhVien" onAction="#handleMenuAction" styleClass="menu-item" text="⚙ QUẢN LÍ THÀNH VIÊN" />
             <Button fx:id="btnThongKe" onAction="#handleMenuAction" styleClass="menu-item" text="⚙ THỐNG KÊ" />
             <Button fx:id="btnHoTro" onAction="#handleMenuAction" styleClass="menu-item" text="⚙ HỖ TRỢ" />
         </VBox>
