--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -8,19 +8,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.ImagePattern?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Rectangle?>
 
-<?import javafx.scene.image.ImageView?>
-<BorderPane prefHeight="800.0"
-            prefWidth="1400.0"
+<BorderPane prefHeight="800.0" prefWidth="1400.0"
             style="-fx-background-color: D9D9D9;"
             stylesheets="@../CSS/dashboard.css"
             xmlns="http://javafx.com/javafx/24.0.1"
@@ -28,12 +24,13 @@
             fx:controller="ui.controllers.DashboardController"
             fx:id="rootPane">
 
-    <!-- Main Content -->
     <center>
         <VBox spacing="16" styleClass="dashboard-bg" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
+
+            <!-- Hàng đầu: Thông tin NV và thông báo -->
             <HBox alignment="CENTER_LEFT" spacing="16" HBox.hgrow="ALWAYS">
 
                 <!-- Thông tin nhân viên -->
@@ -71,79 +68,68 @@
                             <Label layoutX="80.0" prefHeight="35.0" prefWidth="187.0" styleClass="subtitle" text="🔔 Thông Báo" />
                         </children>
                     </AnchorPane>
-               <ScrollPane prefHeight="200.0" prefWidth="343.0" styleClass="scroll-bar">
-                  <content>
+                    <ScrollPane prefHeight="200.0" prefWidth="343.0" styleClass="scroll-bar">
+                        <content>
                             <VBox alignment="CENTER" prefHeight="216.0" prefWidth="329.0" spacing="6" styleClass="box_not">
                                 <Label styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
                                 <Label styleClass="alert-green" text="HD12082025007 - Đã đến giờ hẹn" />
-                        <Label layoutX="63.0" layoutY="75.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
-                        <Label layoutX="63.0" layoutY="131.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
-                        <Label layoutX="63.0" layoutY="149.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
-                        <Label layoutX="63.0" layoutY="168.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
                             </VBox>
-                  </content>
-               </ScrollPane>
+                        </content>
+                    </ScrollPane>
                 </VBox>
 
             </HBox>
 
-            <!--Thống kê -->
+            <!-- Hàng 2: Thống kê -->
             <HBox alignment="CENTER" spacing="16" styleClass="card_infoRT" HBox.hgrow="ALWAYS">
 
-                <!-- Thẻ 1 -->
-                <HBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                    <AnchorPane>
-                        <children>
-                     <VBox layoutX="2.0" layoutY="32.0" prefHeight="61.0" prefWidth="118.0" spacing="4.0">
-                        <children>
-                                  <Label styleClass="text-green" text="30 Đơn Hoàn Thành" />
-                                  <Label styleClass="text-orange" text="17 Đơn Đang Dùng" />
-                                  <Label styleClass="text-red" text="13 Đơn Đang Đợi" />
-                        </children>
-                     </VBox>
-                            <Label layoutX="58.0" layoutY="-13.0" styleClass="card-title" text="SỐ ĐƠN" />
-                            <Circle fill="#4A90E2" layoutX="163.0" layoutY="59.0" radius="40.0" />
-                        </children>
-                    </AnchorPane>
-                </HBox>
-
-                <!-- Thẻ 2 -->
+                <!-- Thẻ 1: SỐ ĐƠN -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
                     <AnchorPane>
                         <children>
-                            <VBox layoutX="61.0" layoutY="31.0" spacing="6">
-                                <Label styleClass="label_CardInfo" text="OUT: 32/50" />
-                                <Label styleClass="label_CardInfo" text="IN: 20/40" />
-                                <Label styleClass="label_CardInfo" text="VIP: 3/10" />
+                            <Label layoutX="65.0" layoutY="-13.0" styleClass="card-title" text="SỐ ĐƠN" />
+                            <VBox layoutX="70.0" layoutY="20.0" spacing="10">
+                                <Label fx:id="lblTongDonDangDoi" styleClass="count-text" text="0" />
+                                <Label fx:id="lblTongDonDaNhan" styleClass="count-text" text="0" />
+                                <Label fx:id="lblTongDonDaThanhToan" styleClass="count-text" text="0" />
                             </VBox>
-                            <Label layoutX="61.0" layoutY="-14.0" styleClass="card-title" text="KHU VỰC" />
                         </children>
                     </AnchorPane>
                 </VBox>
 
-                <!-- Thẻ 3 -->
+                <!-- Thẻ 2: KHU VỰC -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                    <AnchorPane prefHeight="135.0" prefWidth="123.0">
+                    <AnchorPane>
                         <children>
-                            <Label layoutX="28.0" layoutY="38.0" styleClass="money-text" text="12,000,000 VNĐ" />
-                            <Label layoutX="49.0" layoutY="-13.0" styleClass="card-title" text="DOANH THU" />
+                            <Label layoutX="70.0" layoutY="-13.0" styleClass="card-title" text="KHU VỰC" />
+                            <Label fx:id="lblKhuVuc" layoutX="75.0" layoutY="45.0" styleClass="count-text" text="0" />
                         </children>
                     </AnchorPane>
                 </VBox>
 
-                <!-- Thẻ 4 -->
+                <!-- Thẻ 3: DOANH THU -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                    <AnchorPane prefHeight="106.0" prefWidth="53.0">
+                    <AnchorPane>
                         <children>
-                            <Label layoutX="77.0" layoutY="30.0" styleClass="count-text" text="23" />
-                            <Label layoutX="35.0" layoutY="-15.0" styleClass="card-title" text="TỔNG KHÁCH" />
+                            <Label layoutX="60.0" layoutY="-13.0" styleClass="card-title" text="DOANH THU" />
+                            <Label fx:id="lblDoanhThu" layoutX="30.0" layoutY="45.0" styleClass="money-text" text="0 đ" />
+                        </children>
+                    </AnchorPane>
+                </VBox>
+
+                <!-- Thẻ 4: TỔNG KHÁCH -->
+                <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
+                    <AnchorPane>
+                        <children>
+                            <Label layoutX="55.0" layoutY="-13.0" styleClass="card-title" text="TỔNG KHÁCH" />
+                            <Label fx:id="lblSoKhach" layoutX="75.0" layoutY="45.0" styleClass="count-text" text="0" />
                         </children>
                     </AnchorPane>
                 </VBox>
 
             </HBox>
 
-            <!--Biểu đồ -->
+            <!-- Biểu đồ -->
             <HBox alignment="CENTER" spacing="24">
                 <!-- Biểu đồ cột -->
                 <AnchorPane prefHeight="380.0" prefWidth="600.0" styleClass="chart_Background">
@@ -180,8 +166,6 @@
                 </AnchorPane>
             </HBox>
 
-
         </VBox>
     </center>
-
 </BorderPane>
