--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -14,15 +14,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
 
-<BorderPane prefHeight="800.0" prefWidth="1400.0"
-            style="-fx-background-color: D9D9D9;"
-            stylesheets="@../CSS/dashboard.css"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.controllers.DashboardController"
-            fx:id="rootPane">
+<BorderPane fx:id="rootPane" prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/dashboard.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.DashboardController">
 
     <center>
         <VBox spacing="16" styleClass="dashboard-bg" VBox.vgrow="ALWAYS">
@@ -39,7 +32,7 @@
                         <children>
                             <VBox layoutX="-1.0" layoutY="25.0" prefHeight="200.0" prefWidth="100.0">
                                 <StackPane alignment="CENTER">
-                                    <ImageView fx:id="avatarImage" fitWidth="190" fitHeight="190" preserveRatio="true" />
+                                    <ImageView fx:id="avatarImage" fitHeight="190" fitWidth="190" preserveRatio="true" />
                                 </StackPane>
                             </VBox>
                         </children>
@@ -85,33 +78,36 @@
 
                 <!-- Thẻ 1: SỐ ĐƠN -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                    <AnchorPane>
+                    <AnchorPane prefHeight="66.0" prefWidth="260.0">
                         <children>
-                            <Label layoutX="65.0" layoutY="-13.0" styleClass="card-title" text="SỐ ĐƠN" />
-                            <VBox layoutX="70.0" layoutY="20.0" spacing="10">
-                                <Label fx:id="lblTongDonDangDoi" styleClass="count-text" text="0" />
-                                <Label fx:id="lblTongDonDaNhan" styleClass="count-text" text="0" />
-                                <Label fx:id="lblTongDonDaThanhToan" styleClass="count-text" text="0" />
+                            <Label layoutX="114.0" layoutY="-14.0" prefHeight="18.0" prefWidth="72.0" styleClass="card-title" text="SỐ ĐƠN" />
+                            <VBox layoutX="70.0" layoutY="20.0" spacing="0" styleClass="vboxHD">
+                                <Label fx:id="lblTongDonDangDoi" styleClass="countHD, mauHD1" text="0" />
+                                <Label fx:id="lblTongDonDaNhan" styleClass="countHD, mauHD2" text="0" />
+                                <Label fx:id="lblTongDonDaThanhToan" styleClass="countHD, mauHD3" text="0" />
                             </VBox>
                         </children>
                     </AnchorPane>
                 </VBox>
 
-                <!-- Thẻ 2: KHU VỰC -->
-                <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                    <AnchorPane>
+                <VBox alignment="CENTER" maxWidth="250.0" minWidth="150.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
+                    <AnchorPane prefHeight="66.0" prefWidth="260.0">
                         <children>
-                            <Label layoutX="70.0" layoutY="-13.0" styleClass="card-title" text="KHU VỰC" />
-                            <Label fx:id="lblKhuVuc" layoutX="75.0" layoutY="45.0" styleClass="count-text" text="0" />
+                            <Label layoutX="114.0" layoutY="-14.0" prefHeight="22.0" prefWidth="91.0" styleClass="card-title" text="KHU VỰC" />
+                            <VBox layoutX="70.0" layoutY="20.0" spacing="0" styleClass="vboxKV">
+                                <Label fx:id="lblIn" styleClass="countKV, mauKV1" text="0" />
+                                <Label fx:id="lblOut" styleClass="countKV, mauKV2" text="0" />
+                                <Label fx:id="lblVip" styleClass="countKV, mauKV3" text="0" />
+                            </VBox>
                         </children>
                     </AnchorPane>
                 </VBox>
 
                 <!-- Thẻ 3: DOANH THU -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
+                      <Label styleClass="card-title" text="DOANH THU" />
                     <AnchorPane>
                         <children>
-                            <Label layoutX="60.0" layoutY="-13.0" styleClass="card-title" text="DOANH THU" />
                             <Label fx:id="lblDoanhThu" layoutX="30.0" layoutY="45.0" styleClass="money-text" text="0 đ" />
                         </children>
                     </AnchorPane>
@@ -119,9 +115,9 @@
 
                 <!-- Thẻ 4: TỔNG KHÁCH -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
+                      <Label styleClass="card-title" text="TỔNG KHÁCH" />
                     <AnchorPane>
                         <children>
-                            <Label layoutX="55.0" layoutY="-13.0" styleClass="card-title" text="TỔNG KHÁCH" />
                             <Label fx:id="lblSoKhach" layoutX="75.0" layoutY="45.0" styleClass="count-text" text="0" />
                         </children>
                     </AnchorPane>
