--- a/src/main/resources/FXML/CheckIn.fxml
+++ b/src/main/resources/FXML/CheckIn.fxml
@@ -16,7 +16,10 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.ComboBox?>
-<BorderPane prefHeight="800" prefWidth="1400" stylesheets="@../CSS/checkin.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane prefHeight="800" prefWidth="1400"
+            stylesheets="@../CSS/checkin.css, @../CSS/AppMD.css"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="ui.controllers.CheckinController">
 
 
