--- a/src/main/resources/FXML/QLDatBan.fxml
+++ b/src/main/resources/FXML/QLDatBan.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
@@ -20,56 +19,52 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qldatban.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLDatBanController">
+<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qldatban.css, @../CSS/AppMD.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLDatBanController">
 
-    <!-- Nội dung chính ở giữa -->
+    <!-- Trung tâm -->
     <center>
-        <VBox prefHeight="800.0" prefWidth="570.0" spacing="20" styleClass="center-pane" VBox.vgrow="ALWAYS">
+        <VBox spacing="20" styleClass="center-pane" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="30" left="20" right="20" top="10" />
             </padding>
-            <VBox prefHeight="380.0" prefWidth="653.0" styleClass="top">
-                <children>
-                    <HBox alignment="CENTER" prefHeight="55.0" prefWidth="540.0" spacing="10" styleClass="list-name">
-                        <Label>Danh sách bàn đặt trước</Label>
-                    </HBox>
 
-                    <!-- Danh sách hóa đơn đặt trước -->
-                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="296.0" prefWidth="925.0" styleClass="invoice-scroll">
-                        <content>
-                            <VBox fx:id="danhSachDatTruoc" alignment="CENTER_LEFT" prefHeight="385.0" prefWidth="526.0" scaleShape="false" spacing="12" styleClass="invoice-container">
-                                <padding>
-                                    <Insets bottom="10" left="10" right="10" top="10" />
-                                </padding>
-                            </VBox>
-                        </content>
-                    </ScrollPane>
-                </children>
-            </VBox>
-            <VBox prefHeight="380.0" prefWidth="653.0" styleClass="top">
-                <children>
-                    <HBox alignment="CENTER" prefHeight="55.0" prefWidth="540.0" spacing="10" styleClass="list-name">
-                        <Label>Danh sách bàn đã nhận</Label>
-                    </HBox>
+            <!-- Danh sách đặt trước -->
+            <VBox spacing="10" styleClass="top" VBox.vgrow="ALWAYS">
+                <HBox alignment="CENTER" spacing="10" styleClass="list-name">
+                    <Label text="Danh sách bàn đặt trước" />
+                </HBox>
 
-                    <!-- Danh sách hóa đơn đã nhận -->
-                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="296.0" prefWidth="925.0" styleClass="invoice-scroll">
-                        <content>
-                            <VBox fx:id="danhSachDaNhan" alignment="CENTER_LEFT" prefHeight="385.0" prefWidth="526.0" scaleShape="false" spacing="12" styleClass="invoice-container">
-                                <padding>
-                                    <Insets bottom="10" left="10" right="10" top="10" />
-                                </padding>
-                            </VBox>
-                        </content>
-                    </ScrollPane>
-                </children>
+                <ScrollPane fitToHeight="true" fitToWidth="true" styleClass="invoice-scroll" VBox.vgrow="ALWAYS">
+                    <content>
+                        <VBox fx:id="danhSachDatTruoc" alignment="CENTER_LEFT" spacing="12" styleClass="invoice-container" VBox.vgrow="ALWAYS">
+                            <padding>
+                                <Insets bottom="10" left="10" right="10" top="10" />
+                            </padding>
+                        </VBox>
+                    </content>
+                </ScrollPane>
             </VBox>
-            <padding>
-                <Insets bottom="10" left="20" right="20" top="40" />
-            </padding>
+
+            <!-- Danh sách đã nhận -->
+            <VBox spacing="10" styleClass="top" VBox.vgrow="ALWAYS">
+                <HBox alignment="CENTER" spacing="10" styleClass="list-name">
+                    <Label text="Danh sách bàn đã nhận" />
+                </HBox>
+
+                <ScrollPane fitToHeight="true" fitToWidth="true" styleClass="invoice-scroll" VBox.vgrow="ALWAYS">
+                    <content>
+                        <VBox fx:id="danhSachDaNhan" alignment="CENTER_LEFT" spacing="12" styleClass="invoice-container" VBox.vgrow="ALWAYS">
+                            <padding>
+                                <Insets bottom="10" left="10" right="10" top="10" />
+                            </padding>
+                        </VBox>
+                    </content>
+                </ScrollPane>
+            </VBox>
         </VBox>
     </center>
 
+    <!-- Phần phải -->
     <right>
         <!-- Phần thông tin chi tiết và tìm kiếm món ăn -->
         <VBox prefHeight="800.0" prefWidth="435.0" spacing="20" styleClass="details-section">
